{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 51,
  "lineage": "fca250f1-4267-89dc-b95b-2b06760d1f79",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095a8f574cb0ac0d0",
            "arn": "arn:aws:ec2:us-east-1:423623834778:instance/i-0622c18c2c0d0e9fa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0622c18c2c0d0e9fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b19a278d89a60d19",
            "private_dns": "ip-10-0-1-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038040079f88bb922",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-074c79cafe1db0f9c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e840021d1ff58680",
            "tags": {
              "Name": "sprints_private_ec2_0"
            },
            "tags_all": {
              "Name": "sprints_private_ec2_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074c79cafe1db0f9c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095a8f574cb0ac0d0",
            "arn": "arn:aws:ec2:us-east-1:423623834778:instance/i-089a43771e740b3c0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089a43771e740b3c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b84e2f3e39ec4e4",
            "private_dns": "ip-10-0-3-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac30c2796f7a7d2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-074c79cafe1db0f9c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086d25bbc05ebdf78",
            "tags": {
              "Name": "sprints_private_ec2_1"
            },
            "tags_all": {
              "Name": "sprints_private_ec2_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074c79cafe1db0f9c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095a8f574cb0ac0d0",
            "arn": "arn:aws:ec2:us-east-1:423623834778:instance/i-01a36c4307b16b848",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a36c4307b16b848",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0139c2a6ac56879c8",
            "private_dns": "ip-10-0-0-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.217",
            "public_ip": "107.23.252.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04045b080fdccaa60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-074c79cafe1db0f9c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dae596e870432956",
            "tags": {
              "Name": "sprints_public_ec2_0"
            },
            "tags_all": {
              "Name": "sprints_public_ec2_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074c79cafe1db0f9c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095a8f574cb0ac0d0",
            "arn": "arn:aws:ec2:us-east-1:423623834778:instance/i-0e2f3f597d1b7f2ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2f3f597d1b7f2ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043da60d6e528b1a1",
            "private_dns": "ip-10-0-2-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.95",
            "public_ip": "18.212.234.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0845652cb749b5dec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-074c79cafe1db0f9c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007b534dd3b7033b2",
            "tags": {
              "Name": "sprints_public_ec2_1"
            },
            "tags_all": {
              "Name": "sprints_public_ec2_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074c79cafe1db0f9c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:security-group/sg-074c79cafe1db0f9c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074c79cafe1db0f9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241114122346934700000003",
            "name_prefix": "terraform-",
            "owner_id": "423623834778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sprints_sg"
            },
            "tags_all": {
              "Name": "sprints_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07310c0d217649281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-0/190f68863636d114",
            "arn_suffix": "app/sprints-load-balancer-0/190f68863636d114",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sprints-load-balancer-0-1963217992.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-0/190f68863636d114",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sprints-load-balancer-0",
            "preserve_host_header": false,
            "security_groups": [
              "sg-074c79cafe1db0f9c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007b534dd3b7033b2"
              },
              {
                "subnet_id": "subnet-0dae596e870432956"
              }
            ],
            "subnets": [
              "subnet-007b534dd3b7033b2",
              "subnet-0dae596e870432956"
            ],
            "vpc_id": "vpc-07310c0d217649281",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-1/0d82b95d4bf77211",
            "arn_suffix": "app/sprints-load-balancer-1/0d82b95d4bf77211",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-sprints-load-balancer-1-26410228.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-1/0d82b95d4bf77211",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sprints-load-balancer-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-074c79cafe1db0f9c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086d25bbc05ebdf78"
              },
              {
                "subnet_id": "subnet-0e840021d1ff58680"
              }
            ],
            "subnets": [
              "subnet-086d25bbc05ebdf78",
              "subnet-0e840021d1ff58680"
            ],
            "vpc_id": "vpc-07310c0d217649281",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:listener/app/sprints-load-balancer-0/190f68863636d114/cdc7285c0e4358a4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346896200000001/4f944f9fa62921db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:listener/app/sprints-load-balancer-0/190f68863636d114/cdc7285c0e4358a4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-0/190f68863636d114",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:listener/app/sprints-load-balancer-1/0d82b95d4bf77211/d45ed7ddacece7b0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:listener/app/sprints-load-balancer-1/0d82b95d4bf77211/d45ed7ddacece7b0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-1/0d82b95d4bf77211",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346896200000001/4f944f9fa62921db",
            "arn_suffix": "targetgroup/tf-20241114122346896200000001/4f944f9fa62921db",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346896200000001/4f944f9fa62921db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-0/190f68863636d114"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20241114122346896200000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07310c0d217649281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c",
            "arn_suffix": "targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:423623834778:loadbalancer/app/sprints-load-balancer-1/0d82b95d4bf77211"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20241114122346899200000002",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07310c0d217649281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c-20241114125708802400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c",
            "target_id": "i-0622c18c2c0d0e9fa"
          },
          "dependencies": [
            "module.ec2.aws_instance.priv-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c-20241114125709047000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346899200000002/db981d7c6c44a44c",
            "target_id": "i-089a43771e740b3c0"
          },
          "dependencies": [
            "module.ec2.aws_instance.priv-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346896200000001/4f944f9fa62921db-20241114125707828900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346896200000001/4f944f9fa62921db",
            "target_id": "i-01a36c4307b16b848"
          },
          "dependencies": [
            "module.ec2.aws_instance.pub-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346896200000001/4f944f9fa62921db-20241114125707982700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423623834778:targetgroup/tf-20241114122346896200000001/4f944f9fa62921db",
            "target_id": "i-0e2f3f597d1b7f2ca"
          },
          "dependencies": [
            "module.ec2.aws_instance.pub-ec2",
            "module.ec2.aws_security_group.sg",
            "module.ec2.data.aws_ami.ubuntu",
            "module.loadbalancer.aws_lb.load-balancer",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:route-table/rtb-097796b6c1d61ff4a",
            "id": "rtb-097796b6c1d61ff4a",
            "owner_id": "423623834778",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a1535908725e5415",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07310c0d217649281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:route-table/rtb-06f4fa8916808c337",
            "id": "rtb-06f4fa8916808c337",
            "owner_id": "423623834778",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065a6682a0dc2cabf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07310c0d217649281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b909572c050da81c",
            "route_table_id": "rtb-097796b6c1d61ff4a",
            "subnet_id": "subnet-0e840021d1ff58680"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private-rt",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dcc50f34934e02e",
            "route_table_id": "rtb-097796b6c1d61ff4a",
            "subnet_id": "subnet-086d25bbc05ebdf78"
          },
          "dependencies": [
            "module.subnet.aws_route_table.private-rt",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a63923fc2e6dc0bf",
            "route_table_id": "rtb-06f4fa8916808c337",
            "subnet_id": "subnet-0dae596e870432956"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public-rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c82153c52ebe4e22",
            "route_table_id": "rtb-06f4fa8916808c337",
            "subnet_id": "subnet-007b534dd3b7033b2"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public-rt",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:subnet/subnet-0e840021d1ff58680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e840021d1ff58680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623834778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_private_subnet_0"
            },
            "tags_all": {
              "Name": "sprints_private_subnet_0"
            },
            "vpc_id": "vpc-07310c0d217649281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:subnet/subnet-086d25bbc05ebdf78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086d25bbc05ebdf78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623834778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_private_subnet_1"
            },
            "tags_all": {
              "Name": "sprints_private_subnet_1"
            },
            "vpc_id": "vpc-07310c0d217649281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:subnet/subnet-0dae596e870432956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dae596e870432956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623834778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_public_subnet_0"
            },
            "tags_all": {
              "Name": "sprints_public_subnet_0"
            },
            "vpc_id": "vpc-07310c0d217649281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:subnet/subnet-007b534dd3b7033b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007b534dd3b7033b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623834778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sprints_public_subnet_1"
            },
            "tags_all": {
              "Name": "sprints_public_subnet_1"
            },
            "vpc_id": "vpc-07310c0d217649281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0882890751ebf7660",
            "arn": "arn:aws:ec2:us-east-1:423623834778:elastic-ip/eipalloc-0882890751ebf7660",
            "association_id": "eipassoc-0a38538812f9bc1b6",
            "domain": "vpc",
            "id": "eipalloc-0882890751ebf7660",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ef7beaecade7f0bb",
            "private_dns": "ip-10-0-0-82.ec2.internal",
            "private_ip": "10.0.0.82",
            "public_dns": "ec2-34-197-49-122.compute-1.amazonaws.com",
            "public_ip": "34.197.49.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:internet-gateway/igw-065a6682a0dc2cabf",
            "id": "igw-065a6682a0dc2cabf",
            "owner_id": "423623834778",
            "tags": {
              "Name": "sprints-IGW"
            },
            "tags_all": {
              "Name": "sprints-IGW"
            },
            "vpc_id": "vpc-07310c0d217649281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0882890751ebf7660",
            "association_id": "eipassoc-0a38538812f9bc1b6",
            "connectivity_type": "public",
            "id": "nat-0a1535908725e5415",
            "network_interface_id": "eni-0ef7beaecade7f0bb",
            "private_ip": "10.0.0.82",
            "public_ip": "34.197.49.122",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dae596e870432956",
            "tags": {
              "Name": "sprints-NAT"
            },
            "tags_all": {
              "Name": "sprints-NAT"
            }
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623834778:vpc/vpc-07310c0d217649281",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050cc84a3e4aa290b",
            "default_route_table_id": "rtb-049b9675e73b4155e",
            "default_security_group_id": "sg-0b93bda6a1e0738c9",
            "dhcp_options_id": "dopt-0c20cf005ff1ae741",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07310c0d217649281",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049b9675e73b4155e",
            "owner_id": "423623834778",
            "tags": {
              "Name": "sprints-VPC"
            },
            "tags_all": {
              "Name": "sprints-VPC"
            }
          }
        }
      ]
    }
  ]
}